# repo-to-shorts

./: .env.example  .gitattributes  .gitignore  LICENSE  README.md  requirements.txt
backend/: pyproject.toml
backend/src/gva/: __init__.py  cli.py  config.py  workflow.py
backend/src/gva/agents/: __init__.py  evaluator.py  project_understanding.py  repair_writer.py  repo_reader.py  script_writer.py  storyboard_writer.py  verifier.py  visual_spec_builder.py
backend/src/gva/core/: __init__.py  asyncio_windows.py  captions.py  demo_report.py  evidence.py  file_scanner.py  hyperframes.py  json_utils.py  llm_client.py  motion_library.py  pacing.py  render_bridge.py  repo_loader.py  runs.py  tts.py  visible_manifest.py  visible_text.py  visual_assets.py  visual_pages.py
backend/src/gva/models/: __init__.py  evaluation.py  evidence.py  insight.py  render.py  repo.py  script.py  storyboard.py  tts.py  (+1 more)
backend/tests/: test_asyncio_windows.py  test_cli_setup.py  test_config.py  test_evaluator.py  test_evidence_captions_runs.py  test_file_scanner.py  test_hyperframes.py  test_json_utils.py  test_llm_client.py  test_models.py  test_motion_library.py  test_pacing.py  test_project_understanding.py  test_render_bridge.py  test_renderer_visible_text_policy.py  test_repair_writer.py  test_repo_loader.py  test_storyboard_writer.py  test_tts_models.py  test_visible_manifest.py  test_visual_assets.py  test_visual_pages.py  test_web_edit_verification.py  test_web_frontend_dist.py  test_web_rerender_runs.py  test_web_user_assets.py  test_web_user_brief.py  test_workflow_bomb_mode.py
(+60 files in other folders)
