[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "github-video-agent"
version = "0.1.0"
description = "Generate Chinese vertical explainer videos from GitHub or local code projects."
readme = {text = "Generate Chinese vertical explainer videos from GitHub or local code projects.", content-type = "text/markdown"}
requires-python = ">=3.11"
dependencies = [
  "edge-tts>=6.1.0",
  "fastapi>=0.115.0",
  "ffmpeg-python>=0.2.0",
  "gitpython>=3.1.0",
  "httpx>=0.27.0",
  "mutagen>=1.47.0",
  "openai>=1.0.0",
  "pathspec>=0.12.0",
  "pydantic>=2.7.0",
  "pydantic-settings>=2.3.0",
  "python-dotenv>=1.0.0",
  "rich>=13.7.0",
  "tiktoken>=0.7.0",
  "typer>=0.12.0",
  "uvicorn>=0.30.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.2.0"]
web = ["fastapi>=0.115.0", "uvicorn>=0.30.0"]

[project.scripts]
gva = "gva.cli:app"
gva-web = "gva.web.app:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
